# atari-8bit-soft

./: .gitignore  README.md
2025-fujiama-ool-evakuierung/: Cargo.toml  README.md  atari-8bit-tools.toml  ool-evakuierung.xex
2025-fujiama-ool-evakuierung/asm/: game_loop.asm  level1.asm  level2.asm  level3.asm  level4.asm  level5.asm  level6.asm  main.asm  player.asm  screen.asm  screen2.asm
2025-fujiama-ool-evakuierung/src/: levels.rs  main.rs  screen.rs
2025-fujiama-summer-demo/: Cargo.toml  README.md  summer.xex
2025-fujiama-summer-demo/asm/: atari.asm  draw.asm  main.asm  render.asm
2025-fujiama-summer-demo/src/: main.rs
